--- a/new/index.html
+++ b/new/index.html
@@ -14,70 +14,10 @@
   </head>
 
   <body>
-    <!-- HEADER -->
-    <header>
-      <img src="/src/img/logo.png" />
-    </header>
+    <div class="root">
 
-    <!-- MAIN -->
-    <section class="main_content">
-      <!-- MAIN IMAGE -->
-      <div class="wrapper">
-        <img class="img" src="/src/img/main_img.jpg" />
-      </div>
-      <!-- MAIN DESCRIPTION -->
-      <div class="description">
-        매번 비슷한 추천 곡에 싫증을 느끼진 않으셨나요?<br />
-        지금 당신이 느끼는 감정을 손그림, 사진, 영상으로 표현해보세요.<br />
-        MOOD MATCH는 여러분의 평소 취향과 관계없이 지금, 이 순간 당신의 분위기와
-        어울리는 음악을 추천해 드립니다.
-      </div>
-    </section>
-
-    <!-- UPLOAD -->
-    <div class="main_service">
-      <div class="container">
-        <div class="title">어울리는 음악 추천 받기</div>
-        <div class="upload">
-          <a href="./drawing.html" class="drawing">
-            <i class="fa-solid fa-pencil fa-4x"></i>
-            <div>손그림 업로드</div>
-          </a>
-
-          <a href="./picAndVid.html" class="pictureAndVideo">
-            <i class="fa-regular fa-image fa-4x"></i>
-            <div>사진/영상 업로드</div>
-          </a>
-        </div>
-      </div>
     </div>
-
-    <!-- HOW TO -->
-    <section class="howTo">
-      <div class="container">
-        <div class="howTo_content">
-          <div class="howTo_title">HOW TO</div>
-          <div class="howTo_description">
-            1. 원하는 모드를 선택합니다.<br />
-            2. 추천받고 싶은 노래의 시간을 선택합니다.<br />
-            3. 사용자가 업로드한 파일을 AI가 분석하여 어울리는 분위기의 음악을
-            추천해드립니다.
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- TEST -->
-    <!-- <input type="file" id="input_img">
-    <button id="send_btn">보내기</button>
-    <img src="" class="upload_img">
-    FOOTER -->
-    <footer>
-      <p>
-        &copy; 2022<br />
-        kangdb123-@naver.com &nbsp; ilsin205@naver.com
-      </p>
-    </footer>
-  </body>
+    
   <script>
     document.querySelector("#send_btn").addEventListener("click",()=>{
       let selectFile = document.querySelector("#input_img").files[0];
